# Alternative-Feature-Selection

./: .gitignore  LICENSE  README.md  afs.py  alternatives.py  data_handling.py  feature_selection.py  prediction.py  prepare_datasets.py  requirements.txt  run_evaluation.py  run_evaluation_arxiv.py  run_evaluation_cikm.py  run_evaluation_dissertation.py  run_evaluation_journal.py  run_experiments.py  run_experiments_knn.py
afs_package/: README.md  pyproject.toml
afs_package/afs/: __init__.py  afs.py
alfese_package/: LICENSE  README.md  pyproject.toml
alfese_package/alfese/: __init__.py
experimental/: afs_cvxpy.py  afs_gekko.py  afs_mip.py  afs_mrmr.py  afs_ortools_lp.py  afs_pulp.py
