[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alfese"
version = "1.0.0"
authors = [
    {name="Jakob Bach", email="jakob.bach.ka@gmail.com"},
]
description = "Alternative feature selection"
keywords = ["feature selection", "alternatives", "constraints"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.3",
    "ortools>=9.3.10497",
    "pandas>=1.4.1",
    "scikit-learn>=1.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Jakob-Bach/Alternative-Feature-Selection/tree/main/alfese_package"
Issues = "https://github.com/Jakob-Bach/Alternative-Feature-Selection/issues"
